Closed Bug 1068811 Opened 11 years ago Closed 11 years ago

X11 cut-and-paste broken with e10s

Categories

(Core :: DOM: Content Processes, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla36
Tracking Status
e10s m6+ ---

People

(Reporter: rillian, Assigned: mrbkap)

References

Details

(Keywords: dogfood)

Attachments

(1 file, 3 obsolete files)

Since enabling e10s in nightly, Middle-click cut and paste doesn't work. Windows-style ctrl-c, ctrl-v cut and paste does work. If something's in the paste buffer from a ctrl-c, middle click will paste it. However, making a new selection does not change the contents of the middle-click paste buffer.
Keywords: dogfood
Attached patch patch v1 (obsolete) — Splinter Review
This was bothering me enough that I had to fix it. This is the most straightforward way of solving this bug (as far as I know). I thought about simply adding two more sync functions that we always call, but the return values of these functions will never change, so I decided to avoid that.
Attachment #8508257 - Flags: review?(wmccloskey)
Assignee: nobody → mrbkap
Attachment #8508257 - Flags: review?(wmccloskey) → review+
Attached patch patch v1.1 (obsolete) — Splinter Review
Unified builds struck me. I wasn't 'using' enough from mozilla::dom in the previous patch for the nsClipboardProxy.cpp to compile by itself.
Attachment #8508257 - Attachment is obsolete: true
I *think* this broke https://treeherder.mozilla.org/ui/logviewer.html#?job_id=3154819&repo=mozilla-inbound on B2g linux desktop. Especially since the failure is in Clipboard. Can you take a look?
Attached patch followup fix for b2g (obsolete) — Splinter Review
I'd assumed that our clipboard proxy was the only nsIClipboard implementation in child processes. That was not true, thanks to b2g. With this patch, we can be sure to not crash if we're talking to the wrong child-process clipboard implementation.
Attachment #8509031 - Flags: review?(jmathies)
Attachment #8509031 - Flags: review?(jmathies) → review+
Component: Untriaged → DOM: Content Processes
Product: Firefox → Core
Keywords: checkin-needed
Attachment #8508342 - Attachment is obsolete: true
Attachment #8509031 - Attachment is obsolete: true
Attachment #8509711 - Flags: review+
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla36
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: