Bug 1068811 - Make middle-mouse-click paste work in X11. r=billm